deleted extra photos, finished des pre edit

--- a/designer.html
+++ b/designer.html
@@ -31,9 +31,9 @@
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                         <div class="content">
                             <div class="content-overlay"></div>
-                            <img class="content-image" src="img/dev/2020/current.png" style="width:100%">
+                            <img class="content-image" src="img/des/myc1.png" style="width:100%">
                             <div class="content-details fadeIn-top">
-                                <div class="captions"> <a href="index.html"> Isabiramontes.me </a> </div>
+                                <div class="captions">Mycellium grown tray top</div>
                             </div>
                         </div>
                     </div>
@@ -42,9 +42,9 @@
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                         <div class="content">
                             <div class="content-overlay"></div>
-                            <img class="content-image" src="img/dev/2020/pfab.png" style="width:100%">
+                            <img class="content-image" src="img/des/myc2.png" style="width:100%">
                             <div class="content-details fadeIn-top">
-                                <div class="captions"> <a href="https://class.textile-academy.org/2021/isa.biramontes/"> Fabricacademey Documentation</a></div>
+                                <div class="captions">Mycellium grown tray side </div>
                             </div>
                         </div>
                     </div>
@@ -71,82 +71,35 @@
                 <h3 style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 5%;"> Senior, Junior, & Sophomore Year at The High School of Fashion Industries</h3>
             </div>
             <div class="row">
-                <!--First Wearable Tech Garment, Debuted at The High School of Fashion Industries Senior Fashion Show -->
-                <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
-                    <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
-                        <div class="content">
-                            <div class="content-overlay"></div>
-                            <img class="content-image" src="img/dev/2019/dev_2019_1tb.png" style="width:100%">
-                            <div class="content-details fadeIn-top"></div>
-                        </div>
-                    </div>
-                    <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
-                        <div class="content">
-                            <div class="content-overlay"></div>
-                            <img class="content-image" src="img/dev/2019/dev_2019_2tb.png" style="width:100%">
-                            <div class="content-details fadeIn-top"></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
-                    <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
-                        <div class="content">
-                            <div class="content-overlay"></div>
-                            <img class="content-image" src="img/art/2020/artist_2020_1.png" style="width:100%">
-                            <div class="content-details fadeIn-top"></div>
-                        </div>
-                    </div>
-                </div>
                 <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                         <div class="content">
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/dev/2019/dev_2019_3tb.png" style="width:100%">
-                            <div class="content-details fadeIn-top"></div>
+                            <div class="content-details fadeIn-top">
+                                <div class="captions"> Debuted at The High School of Fashion Industries Senior Fashion Show</div>
+                            </div>
                         </div>
                     </div>
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                         <div class="content">
                             <div class="content-overlay"></div>
-                            <img class="content-image" src="img/dev/2019/dev_2019_2tb.png" style="width:100%">
-                            <div class="content-details fadeIn-top"></div>
+                            <img class="content-image" src="img/des/tbpv.png" style="width:100%">
+                            <div class="content-details fadeIn-top">
+                                <div class="captions"> Final Garment, Photoville Photo </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
-                    <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
-                        <div class="content">
-                            <div class="content-overlay"></div>
-                            <img class="content-image" src="img/art/2020/artist_2020_2.png" style="width:100%">
-                            <div class="content-details fadeIn-top"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
 
                 <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                         <div class="content">
                             <div class="content-overlay"></div>
-                            <img class="content-image" src="img/art/2020/artist_2020_1.png" style="width:100%">
-                            <div class="content-details fadeIn-top"></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
-                    <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
-                        <div class="content">
-                            <div class="content-overlay"></div>
-                            <img class="content-image" src="img/dev/2019/dev_2019_3tb.png" style="width:100%">
-                            <div class="content-details fadeIn-top"></div>
-                        </div>
-                    </div>
-                    <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
-                        <div class="content">
-                            <div class="content-overlay"></div>
-                            <img class="content-image" src="img/dev/2019/dev_2019_2tb.png" style="width:100%">
-                            <div class="content-details fadeIn-top"></div>
+                            <img class="content-image" src="img/des/tbpv2.png" style="width:100%">
+                            <div class="content-details fadeIn-top">
+                                <div class="captions"> Final Garment, Photoville Photo </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -155,10 +108,78 @@
                         <div class="content">
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/des/tryon.png" style="width:100%">
+                            <div class="content-details fadeIn-top">
+                                <div class="captions"> Bodysuit Prototype Try On </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
+                    <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                        <div class="content">
+                            <div class="content-overlay"></div>
+                            <img class="content-image" src="img/des/infront2.png" style="width:100%">
                             <div class="content-details fadeIn-top"></div>
                         </div>
                     </div>
                 </div>
+
+            </div>
+            <div class="row">
+                <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
+                    <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                        <div class="content">
+                            <div class="content-overlay"></div>
+                            <img class="content-image" src="img/des/drapes.png" style="width:100%">
+                            <div class="content-details fadeIn-top">
+                                <div class="captions"> Early Drapes </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
+                    <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                        <div class="content">
+                            <div class="content-overlay"></div>
+                            <img class="content-image" src="img/des/pm1.png" style="width:100%">
+                            <div class="content-details fadeIn-top">
+                                <div class="captions"> Patternmaking for dress bodice </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                        <div class="content">
+                            <div class="content-overlay"></div>
+                            <img class="content-image" src="img/des/pm2.png" style="width:100%">
+                            <div class="content-details fadeIn-top">
+                                <div class="captions"> Patternmaking for bodysuit </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
+                    <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                        <div class="content">
+                            <div class="content-overlay"></div>
+                            <img class="content-image" src="img/des/uxnotes.png" style="width:100%">
+                            <div class="content-details fadeIn-top">
+                                <div class="captions"> Early Sketches </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
+                    <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                        <div class="content">
+                            <div class="content-overlay"></div>
+                            <img class="content-image" src="img/des/notep1.png" style="width:100%">
+                            <div class="content-details fadeIn-top">
+                                <div class="captions"> Inital Garment Storyboarding & UX Designing</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
             <div class="row">
                 <div class="col-xs-4 col-md-4" style="padding-right: 2%;">
