--- a/developer.html
+++ b/developer.html
@@ -134,7 +134,7 @@
             <div class="row" style="background: rgb(0,0,0);">
                 <div class="col-xs-4 col-md-4"></div>
                 <div class="col-xs-4 col-md-4" style="float:none;margin:auto;">
-                    <div style="text-align: center; height: 10%; border-style: none;">
+                    <div style="text-align: center; height: 10%; border-style: none;" class="social" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                         <a href="https://github.com/IPbiramontes/senior_fashion_show" target="_blank" style="border-style: none; font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
                     </div>
                 </div>
