finished homepages, in final phase

--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
                 <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                     <div class="content">
                         <div class="content-overlay"></div>
-                        <img class="content-image" src="img/des/myc1.png" style="width:100%">
+                        <img class="content-image" src="img/des/pm1.png" style="width:100%">
                         <div class="content-details fadeIn-top"></div>
                     </div>
                 </div>
                 <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                     <div class="content">
                         <div class="content-overlay"></div>
-                        <img class="content-image" src="img/art/2021/may2021.png" style="width:100%">
+                        <img class="content-image" src="img/des/gd3.png" style="width:100%">
                         <div class="content-details fadeIn-top"></div>
                     </div>
                 </div>
@@ -73,10 +73,16 @@
                 <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                     <div class="content">
                         <div class="content-overlay"></div>
-                        <img class="content-image" src="img/des/fuafinal.png" style="width:100%">
+                        <img class="content-image" src="img/dev/2020/p2020.png" style="width:100%">
                         <div class="content-details fadeIn-top"></div>
                     </div>
                 </div>
+
+
+
+
+
+
             </div>
             <!-- col 2  -->
             <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
@@ -97,45 +103,40 @@
                 <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                     <div class="content">
                         <div class="content-overlay"></div>
-                        <img class="content-image" src="img/art/2020/artist_2020_3tb.png" style="width:100%">
+                        <img class="content-image" src="img/des/sketckesmarist.png" style="width:100%">
                         <div class="content-details fadeIn-top"></div>
                     </div>
                 </div>
                 <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                     <div class="content">
                         <div class="content-overlay"></div>
-                        <img class="content-image" src="img/art/2021/artist_2021_1.png" style="width:100%">
+                        <img class="content-image" src="img/art/2021/1p3.png" style="width:100%">
                         <div class="content-details fadeIn-top"></div>
                     </div>
                 </div>
                 <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                     <div class="content">
                         <div class="content-overlay"></div>
-                        <img class="content-image" src="img/dev/2019/devwea1.png" style="width:100%">
+                        <img class="content-image" src="img/des/tbpv2.png" style="width:100%">
                         <div class="content-details fadeIn-top"></div>
                     </div>
                 </div>
                 <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                     <div class="content">
                         <div class="content-overlay"></div>
-                        <img class="content-image" src="img/dev/2020/p2020.png" style="width:100%">
+                        <img class="content-image" src="img/des/des_2019_1tb.png" style="width:100%">
                         <div class="content-details fadeIn-top"></div>
                     </div>
                 </div>
+
+
             </div>
             <!-- col 3  -->
             <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
                 <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                     <div class="content">
                         <div class="content-overlay"></div>
-                        <img class="content-image" src="img/dev/2019/dev_2019_1tb.png" style="width:100%">
-                        <div class="content-details fadeIn-top"></div>
-                    </div>
-                </div>
-                <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
-                    <div class="content">
-                        <div class="content-overlay"></div>
-                        <img class="content-image" src="img/dev/2019/wearable.gif" style="width:100%">
+                        <img class="content-image" src="img/art/2020/artist_2020_3tb.png" style="width:100%">
                         <div class="content-details fadeIn-top"></div>
                     </div>
                 </div>
@@ -149,6 +150,27 @@
                 <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                     <div class="content">
                         <div class="content-overlay"></div>
+                        <img class="content-image" src="img/art/2021/2p2.png" style="width:100%">
+                        <div class="content-details fadeIn-top"></div>
+                    </div>
+                </div>
+                <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                    <div class="content">
+                        <div class="content-overlay"></div>
+                        <img class="content-image" src="img/dev/2019/wearable.gif" style="width:100%">
+                        <div class="content-details fadeIn-top"></div>
+                    </div>
+                </div>
+                <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                    <div class="content">
+                        <div class="content-overlay"></div>
+                        <img class="content-image" src="img/dev/2019/notep3.png" style="width:100%">
+                        <div class="content-details fadeIn-top"></div>
+                    </div>
+                </div>
+                <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                    <div class="content">
+                        <div class="content-overlay"></div>
                         <img class="content-image" src="img/des/myc1.png" style="width:100%">
                         <div class="content-details fadeIn-top"></div>
                     </div>
@@ -156,24 +178,12 @@
                 <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                     <div class="content">
                         <div class="content-overlay"></div>
-                        <img class="content-image" src="img/art/2021/may2021.png" style="width:100%">
+                        <img class="content-image" src="img/des/myc2.png" style="width:100%">
                         <div class="content-details fadeIn-top"></div>
                     </div>
                 </div>
-                <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
-                    <div class="content">
-                        <div class="content-overlay"></div>
-                        <img class="content-image" src="img/des/bbsentb.png" style="width:100%">
-                        <div class="content-details fadeIn-top"></div>
-                    </div>
-                </div>
-                <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
-                    <div class="content">
-                        <div class="content-overlay"></div>
-                        <img class="content-image" src="img/des/fuafinal.png" style="width:100%">
-                        <div class="content-details fadeIn-top"></div>
-                    </div>
-                </div>
+
+
             </div>
             <!-- col 4  -->
             <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
@@ -194,31 +204,34 @@
                 <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                     <div class="content">
                         <div class="content-overlay"></div>
-                        <img class="content-image" src="img/dev/2019/dev_2019_3tb.png" style="width:100%">
+                        <img class="content-image" src="img/des/moodboardmarist.png" style="width:100%">
                         <div class="content-details fadeIn-top"></div>
                     </div>
                 </div>
                 <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                     <div class="content">
                         <div class="content-overlay"></div>
-                        <img class="content-image" src="img/art/2021/artist_2021_3.png" style="width:100%">
+                        <img class="content-image" src="img/dev/181716/nba2.png" style="width:100%">
                         <div class="content-details fadeIn-top"></div>
                     </div>
                 </div>
                 <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                     <div class="content">
                         <div class="content-overlay"></div>
-                        <img class="content-image" src="img/dev/2019/devwea1.png" style="width:100%">
+                        <img class="content-image" src="img/art/2021/2p3.png" style="width:100%">
                         <div class="content-details fadeIn-top"></div>
                     </div>
                 </div>
                 <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                     <div class="content">
                         <div class="content-overlay"></div>
-                        <img class="content-image" src="img/art/2021/artist_2021_4tb.png" style="width:100%">
+                        <img class="content-image" src="img/art/2020/artist_2020_5tb.png" style="width:100%">
                         <div class="content-details fadeIn-top"></div>
                     </div>
                 </div>
+
+
+
             </div>
         </div>
     </div>
