--- a/designer.html
+++ b/designer.html
@@ -72,6 +72,17 @@
             </div>
             <div class="row">
                 <div class="col-xs-4 col-md-4" style="padding-right: 2%;">
+                    <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                        <div class="content">
+                            <div class="content-overlay"></div>
+                            <img class="content-image" src="img/des/prom.png" style="width:100%">
+                            <div class="content-details fadeIn-top">
+                                <div class="captions"> Prom Dress, Gown w/ detattachable train </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-4 col-md-4" style="padding-right: 2%;">
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                         <div class="content">
                             <div class="content-overlay"></div>
@@ -103,19 +114,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-4 col-md-4" style="padding-right: 2%;">
-                    <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
-                        <div class="content">
-                            <div class="content-overlay"></div>
-                            <img class="content-image" src="img/des/pv3.png" style="width:100%">
-                            <div class="content-details fadeIn-top">
-                                <div class="captions"> Final Garment, Photoville Photo </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
             </div>
             <div class="row">
                 <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
