--- a/artist.html
+++ b/artist.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
-    <html>
-        <head>
-            <meta charset="utf-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-            <title>Isa Biramontes</title>
-            <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-            <link rel="stylesheet" href="https://use.typekit.net/zlk3afr.css"> 
-            <link rel="preconnect" href="https://fonts.gstatic.com"> 
-            <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-            <link rel="stylesheet" href="fonts/simple-line-icons.min.css">
-            <link rel="stylesheet" href="css/footer.css">
-            <link rel="stylesheet" href="css/custom.css">
-            <link rel="stylesheet" href="css/timeline.css">
-            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
-        </head>
-        <body>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Isa Biramontes</title>
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.typekit.net/zlk3afr.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="fonts/simple-line-icons.min.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="css/timeline.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
+</head>
+
+<body>
     <div class="bar"> </div>
     <div style="background: #000000; padding-top: 5%;">
         <div class="container-fluid" style="padding-left: 5%; padding-right: 5%;">
@@ -29,7 +31,9 @@
                         <div class="content">
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/art/2021/may2021.png" style="width:100%">
-                            <div class="content-details fadeIn-top"><div class="captions">"grasping for straws"</div></div>
+                            <div class="content-details fadeIn-top">
+                                <div class="captions">"grasping for straws"</div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -38,7 +42,9 @@
                         <div class="content">
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/art/2021/artist_2021_3.png" style="width:100%">
-                            <div class="content-details fadeIn-top"><div class="captions">"the sun is sapphic"</div></div>
+                            <div class="content-details fadeIn-top">
+                                <div class="captions">"the sun is sapphic"</div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -47,7 +53,9 @@
                         <div class="content">
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/art/2021/artist_2021_1.png" style="width:100%">
-                            <div class="content-details fadeIn-top"><div class="captions"> Work In Progress</div></div>
+                            <div class="content-details fadeIn-top">
+                                <div class="captions"> Work In Progress</div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -56,18 +64,22 @@
                         <div class="content">
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/art/2021/artist_2021_2.png" style="width:100%">
-                            <div class="content-details fadeIn-top"><div class="captions">untitled</div></div>
+                            <div class="content-details fadeIn-top">
+                                <div class="captions">untitled</div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div> 
+            </div>
             <div class="row">
                 <div class="col" style="padding-right: 2%;">
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                         <div class="content">
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/art/2021/1p3.png" style="height: 40%; width:100%;">
-                            <div class="content-details fadeIn-top"><div class="captions">Mini Zine Series, Vol 1 Pg 3</div></div>
+                            <div class="content-details fadeIn-top">
+                                <div class="captions">Mini Zine Series, Vol 1 Pg 3</div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -76,7 +88,9 @@
                         <div class="content">
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/art/2021/2p2.png" style="height: 36%; width:100%">
-                            <div class="content-details fadeIn-top"><div class="captions"> Mini Zine Series, Vol 2 Pg 2</div></div>
+                            <div class="content-details fadeIn-top">
+                                <div class="captions"> Mini Zine Series, Vol 2 Pg 2</div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -85,7 +99,9 @@
                         <div class="content">
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/art/2021/2p3.png" style="width:100%">
-                            <div class="content-details fadeIn-top"><div class="captions">Mini Zine Series, Vol 2 Pg 3</div></div>
+                            <div class="content-details fadeIn-top">
+                                <div class="captions">Mini Zine Series, Vol 2 Pg 3</div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -94,7 +110,9 @@
                         <div class="content">
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/art/2021/3p5.png" style="width:100%">
-                            <div class="content-details fadeIn-top"><div class="captions">Mini Zine Series, Vol 3 Pg 5</div></div>
+                            <div class="content-details fadeIn-top">
+                                <div class="captions">Mini Zine Series, Vol 3 Pg 5</div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -103,12 +121,14 @@
                         <div class="content">
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/art/2021/3p6.png" style="width:100%">
-                            <div class="content-details fadeIn-top"><div class="captions">Mini Zine Series, Vol 3 Pg 6</div></div>
+                            <div class="content-details fadeIn-top">
+                                <div class="captions">Mini Zine Series, Vol 3 Pg 6</div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div> 
-            
+            </div>
+
             <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-top: 6%;" class="container my-auto text-center">
                 <hr width="75%" color="#d8ff33" border-width="10px">
             </div>
@@ -191,14 +211,15 @@
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                         <div class="content">
                             <div class="content-overlay"></div>
-                            <img class="content-image" src="img/art/2019/artist_2019_1.png" style="width:100%">
+                            <img class="content-image" src="img/art/2019/artist_2019_1.jpg" style="width:100%">
                             <div class="content-details fadeIn-top">
                                 <div class="captions">Final Project, Mood Board </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-3 col-md-3" style="padding-right: 2%;"></div><div class="col-xs-3 col-md-3" style="padding-right: 2%;"></div>
+                <div class="col-xs-3 col-md-3" style="padding-right: 2%;"></div>
+                <div class="col-xs-3 col-md-3" style="padding-right: 2%;"></div>
                 <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                         <div class="content">
@@ -217,7 +238,7 @@
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                         <div class="content">
                             <div class="content-overlay"></div>
-                            <img class="content-image" src="img/art/2019/artist_2019_2.png" style="width:100%">
+                            <img class="content-image" src="img/art/2019/artist_2019_2.jpg" style="width:100%">
                             <div class="content-details fadeIn-top">
                                 <div class="captions"> Final Croquis </div>
                             </div>
@@ -241,7 +262,7 @@
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                         <div class="content">
                             <div class="content-overlay"></div>
-                            <img class="content-image" src="img/art/2019/artist_2019_5.png" style="width:100%">
+                            <img class="content-image" src="img/art/2019/artist_2019_5.jpg" style="width:100%">
                             <div class="content-details fadeIn-top">
                                 <div class="captions"> Project 2, Indexed Color Mood Board </div>
                             </div>
@@ -263,7 +284,7 @@
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                         <div class="content">
                             <div class="content-overlay"></div>
-                            <img class="content-image" src="img/art/2019/repeat2.png" style="width:100%">
+                            <img class="content-image" src="img/art/2019/repeat2.jpg" style="width:100%">
                             <div class="content-details fadeIn-top">
                                 <div class="captions"> Project 2, Repeat</div>
                             </div>
@@ -312,7 +333,7 @@
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                         <div class="content">
                             <div class="content-overlay"></div>
-                            <img class="content-image" src="img/art/2019/artist_2019_7.png" style="width:100%">
+                            <img class="content-image" src="img/art/2019/artist_2019_7.jpg" style="width:100%">
                             <div class="content-details fadeIn-top">
                                 <div class="captions">Project 1, Mood Board </div>
                             </div>
@@ -326,7 +347,7 @@
                             <img class="content-image" src="img/art/2019/motifs1.png" style="width:100%">
                             <div class="content-details fadeIn-top">
                                 <div class="captions"> Project 1, Motif Set </div>
-                                
+
                             </div>
                         </div>
                     </div>
@@ -366,7 +387,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-3 col-md-3" style="padding-right: 2%;"></div><div class="col-xs-3 col-md-3" style="padding-right: 2%;"></div>
+                <div class="col-xs-3 col-md-3" style="padding-right: 2%;"></div>
+                <div class="col-xs-3 col-md-3" style="padding-right: 2%;"></div>
                 <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                         <div class="content">
@@ -406,7 +428,9 @@
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/art/20182017/Macbeth.gif" style="width:100%">
                             <div class="content-details fadeIn-top">
-                                <div class="captions"> Inspired by <a href="https://github.com/IPbiramontes/macbeth-characterization"> <i>Macbeth</i> </a></div>     
+                                <div class="captions"> Inspired by
+                                    <a href="https://github.com/IPbiramontes/macbeth-characterization"> <i>Macbeth</i> </a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -427,4 +451,5 @@
     <script src="js/stylish-portfolio.js"></script>
     <script src="js/custom.js"></script>
 </body>
-    </html>
+
+</html>
