--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                     <div class="content">
                         <div class="content-overlay"></div>
-                        <img class="content-image" src="img/art/2019/artist_2019_1.png" style="width:100%">
+                        <img class="content-image" src="img/art/2019/artist_2019_1.jpg" style="width:100%">
                         <div class="content-details fadeIn-top"></div>
                     </div>
                 </div>
