--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
                         <br>
                         <p style="padding-left: 15px;padding-right: 15px;">Isa is currently seeking work and has immediate availability.</p>
                         <br>
-                        <div class="social" style="padding-left: 15px; height: 30px;border-style: none;">
+                        <div class="social" style="padding-left: 15px; height: 30px;border-style: none; padding-bottom: 20%;">
                             <a href="https://github.com/IPbiramontes" target="_blank" style="padding-right: 3%; border-style: none;font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
                             <a href="https://www.instagram.com/isa.s_wearables/" target="_blank" style="padding-right: 3%; border-style: none;color: rgb(255,255,255);font-size: 25px;"><i class="icon-social-instagram" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
                             <a href="https://www.linkedin.com/in/isa-biramontes-they-she-891944149/" target="_blank" style=" border-style: none;color: rgb(255,255,255);font-size: 25px;"><i class="icon-social-linkedin"></i></a>
@@ -36,11 +36,11 @@
                     <div class="col">
                         <form action="https://formspree.io/f/mvoveogg" method="POST">
                             <div class="row">
-                                <div class="col-md-12 col-lg-6">
+                                <div class="col-md-6 col-lg-6">
                                     <p class="required">Name</p>
                                     <div class="form-group" style="padding-bottom: 2%;"><input class="form-control" type="text" name="first_name" placeholder="First" required></div>
                                 </div>
-                                <div class="col-md-12 col-lg-6">
+                                <div class="col-md-6 col-lg-6">
                                     <p id="hidden"> - </p>
                                     <div class="form-group" style="padding-bottom: 2%;"><input class="form-control" type="text" name="last_name" placeholder="Last" required></div>
                                 </div>
